# cpp109

./: .gitignore  CMakeLists.txt  README.md  clean_logs.ps1  createAgents.ps1  opencode.json  test_plat2.cpp  test_platform.cpp
.github/workflows/: ci.yml
bench/: batch_test.cpp  bench.cpp  bench_comparison.cpp  bench_comparison.err  bench_latency.cpp  bench_latency_breakdown.cpp  bench_latency_instrumented.cpp  bench_latency_quill.cpp  bench_latency_spdlog.cpp  bench_self.cpp  bench_throughput.cpp  bench_thru_cpp.cpp  bench_thru_cpp_mt.cpp  bench_thru_quill.cpp  bench_thru_quill_mt.cpp  bench_thru_spd.cpp  bench_thru_spd_mt.cpp  test_quill_minimal.cpp
examples/: async.cpp  basic.cpp  config_file.cpp  custom_formatter.cpp  file_output.cpp  log_config.json  rotating.cpp
include/log/: async_sink.hpp  config.hpp  cpu_pool.hpp  formatter.hpp  log.hpp  log_event.hpp  log_level.hpp  logger.hpp  platform.hpp  registry.hpp  ring_buffer.hpp  sink.hpp  timestamp.hpp
include/log/sinks/: callback_sink.hpp  console_sink.hpp  daily_file_sink.hpp  file_sink.hpp  null_sink.hpp  rotating_file_sink.hpp
include/log/util/: string.hpp
src/: platform_posix.cpp  platform_win.cpp
tests/: test_async.cpp  test_config.cpp  test_formatter.cpp  test_level.cpp  test_logger.cpp  test_macros.cpp  test_sinks.cpp
